--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
   background-color: #d9dcd6;
 }
 
-.header {
+header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -16,16 +16,13 @@ body {
   color: #ffffff;
 }
 
-.header h1 {
+h1 {
   display: inline-block;
   font-size: 48px;
-}
-
-.header h1 .seo {
   color: #d9dcd6;
 }
 
-.header div {
+nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -33,11 +30,7 @@ body {
   font-size: 20px;
 }
 
-.header div ul {
-  list-style-type: none;
-}
-
-.header div ul li {
+li {
   display: inline-block;
   margin-left: 25px;
 }
@@ -85,51 +78,21 @@ p {
   height: 100%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
+  margin-bottom: 32px;
+  color: #ffffff;
 }
-
-.benefit-lead {
+/* combined class tags for lead gen, brand aware, and cost manag */
+.columright {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-cost {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-lead h3 {
+h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-lead img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-cost img {
+.columright img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
@@ -197,6 +160,6 @@ p {
   text-align: center;
 }
 
-.footer h2 {
+#foothead {
   font-size: 20px;
 }
